--- a/CHANGES
+++ b/CHANGES
@@ -19,6 +19,7 @@ Version
 - Allow nested comments in the input file. All comments must be closed.
   CryptoVerif will raise an error otherwise.
 - Fixed internal error due to a forgotten game before focus command.
+- Fixed internal error LetEqual terms should have a variable in the left-hand side
 
 Version 2.05
 
